webServer/error.txt~
ye@ye:~/c_c++/ssl/webServer$ make
gcc common.h web_server.c main.c iolib.c -o web_server
web_server.c: In function ‘configuration’:
web_server.c:8:2: error: unknown type name ‘FIFE’
  FIFE * fp;
  ^
web_server.c:13:5: warning: assignment makes pointer from integer without a cast [enabled by default]
  fp = fopen("./config.ini","r");
     ^
web_server.c:15:11: error: ‘NULL’ undeclared (first use in this function)
  if(fp == NULL)
           ^
web_server.c:15:11: note: each undeclared identifier is reported only once for each function it appears in
web_server.c:24:10: warning: incompatible implicit declaration of built-in function ‘strlen’ [enabled by default]
   if(buf[strlen(buf) - 1] != '\n')
          ^
web_server.c:42:6: warning: incompatible implicit declaration of built-in function ‘strstr’ [enabled by default]
   if(strstr(buf,"port") == buf)
      ^
web_server.c:48:12: warning: incompatible implicit declaration of built-in function ‘strchr’ [enabled by default]
    if((p = strchr(buf,':')) == NULL)
            ^
web_server.c:64:12: warning: incompatible implicit declaration of built-in function ‘strchr’ [enabled by default]
    if((p = strchr(buf,':')) == NULL)
            ^
web_server.c: At top level:
web_server.c:87:13: warning: ‘struct sockaddr_in’ declared inside parameter list [enabled by default]
 init(struct sockaddr_in * sin,int * lfd,int * port,char * path)
             ^
web_server.c:87:13: warning: its scope is only this definition or declaration, which is probably not what you want [enabled by default]
web_server.c: In function ‘init’:
web_server.c:93:2: warning: incompatible implicit declaration of built-in function ‘bzero’ [enabled by default]
  bzero(sin,sizeof(struct sockaddr_in));
  ^
web_server.c:93:19: error: invalid application of ‘sizeof’ to incomplete type ‘struct sockaddr_in’
  bzero(sin,sizeof(struct sockaddr_in));
                   ^
web_server.c:95:5: error: dereferencing pointer to incomplete type
  sin->sin_family = AF_INEF;
     ^
web_server.c:95:20: error: ‘AF_INEF’ undeclared (first use in this function)
  sin->sin_family = AF_INEF;
                    ^
web_server.c:97:5: error: dereferencing pointer to incomplete type
  sin->sin_addr.s_addr = INDDR_ANY;
     ^
web_server.c:97:25: error: ‘INDDR_ANY’ undeclared (first use in this function)
  sin->sin_addr.s_addr = INDDR_ANY;
                         ^
web_server.c:99:5: error: dereferencing pointer to incomplete type
  sin->sin_port = htons(*port);
     ^
web_server.c:102:27: error: ‘SOCK_STREAM’ undeclared (first use in this function)
  if((tfd = socket(AF_INEF,SOCK_STREAM,0)) == -1)
                           ^
web_server.c:108:45: error: invalid application of ‘sizeof’ to incomplete type ‘struct sockaddr_in’
  if((bind(tfd,(struct sockaddr *)sin,sizeof(struct sockaddr_in))) == -1)
                                             ^
web_server.c: In function ‘get_path’:
web_server.c:131:11: error: ‘MAX_LINE’ undeclared (first use in this function)
  char buf[MAX_LINE];
           ^
web_server.c:141:5: warning: incompatible implicit declaration of built-in function ‘strstr’ [enabled by default]
  if(strstr(buf,"GET") != buf)
     ^
web_server.c:149:3: warning: incompatible implicit declaration of built-in function ‘strcat’ [enabled by default]
   strcat(path,"/index.html");
   ^
web_server.c:161:3: warning: incompatible implicit declaration of built-in function ‘strcat’ [enabled by default]
   strcat(path,&buf[4]);
   ^
web_server.c: In function ‘error_page’:
web_server.c:178:3: warning: incompatible implicit declaration of built-in function ‘sprintf’ [enabled by default]
   sprintf(err_str,"HTTP/1.1 404 not exist\r\n");
   ^
web_server.c:181:55: warning: incompatible implicit declaration of built-in function ‘strlen’ [enabled by default]
  if(my_write(sock_fd,"Content-Type:text/html\r\n\r\n",strlen("Content-Type:text/html\r\n\r\n")) == -1)
                                                       ^
web_server.c: In function ‘write_page’:
web_server.c:201:11: error: ‘MAX_LINE’ undeclared (first use in this function)
  char buf[MAX_LINE];
           ^
web_server.c:202:40: warning: incompatible implicit declaration of built-in function ‘strlen’ [enabled by default]
  if(my_write(cfd,"HTTP/1.1 200 OK\r\n",strlen("HTTP/1.1 200 OK")) == -1)
                                        ^
main.c:1:20: fatal error: common.c: 没有那个文件或目录
 #include "common.c"
                    ^
compilation terminated.
iolib.c: In function ‘my_read’:
iolib.c:24:7: error: ‘errno’ undeclared (first use in this function)
    if(errno == EINTR)
       ^
iolib.c:24:7: note: each undeclared identifier is reported only once for each function it appears in
iolib.c:24:16: error: ‘EINTR’ undeclared (first use in this function)
    if(errno == EINTR)
                ^
iolib.c: In function ‘my_write’:
iolib.c:59:7: error: ‘errno’ undeclared (first use in this function)
    if(errno == EINTR)
       ^
iolib.c:59:16: error: ‘EINTR’ undeclared (first use in this function)
    if(errno == EINTR)
                ^
make: *** [web_server] 错误 1
ye@ye:~/c_c++/ssl/webServer$ 

